# EngineLab

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/grid/: grid.h
src/math/: mat4.h  vec3.cpp  vec3.h  vec4.h
src/models/: grid.h
src/renderer/: framebuffer.h  rasterizer.h  sdl_window.cpp  sdl_window.h  vertex.h
src/scene/: camera.h  cube.h  grid.h
tests/: frame_buffer_tests.cpp  math_tests.cpp  test_utils.h
